# owork

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  README_EN.md  SECURITY.md  package-lock.json
.github/workflows/: build-macos.yml  build-release.yml  build-windows.yml  dev-build.yml  release.yml
backend/: .env.example  README_DEMOS.md  config.py  demo_boto3_tool_use.py  demo_reasoning_test.py  demo_simple_test.py  main.py  pyproject.toml
backend/core/: agent_manager.py  local_skill_manager.py  plugin_manager.py  session_manager.py  skill_manager.py  workspace_manager.py
backend/database/: __init__.py  base.py  dynamodb.py  sqlite.py
backend/routers/: __init__.py  agents.py  chat.py  plugins.py  settings.py  skills.py  workspace.py
backend/schemas/: agent.py  marketplace.py  message.py  permission.py  settings.py  skill.py  workspace.py
backend/tests/: simple_test.py  test_sdk.py
desktop/: BUILD_GUIDE.md  README.md  backend.env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
desktop/resources/: skill-registry.json
desktop/scripts/: build-backend.sh  build.sh
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: HITL_PERMISSION_FLOW.md
docs/plans/: 2026-01-28-i18n-design.md  2026-01-28-i18n-implementation.md  2026-01-30-chat-history-grouping-design.md  (+2 more)
(+52 files in other folders)
